metadata/force-app/main/default/objects/CustomName_OBXPX__c/CustomName_OBXPX__c.object-meta.xml
<CustomObject>
    <description>Description_RnUXR</description>
    <label>CustomLabel_KTbcy</label>
    <nameField>
        <label>CustomLabel_KTbcy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_KTbcys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>