metadata/force-app/main/default/objects/CustomName_OBXPX__c/fields/CustomField_KWQow__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KWQow__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVsgQI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>