metadata/force-app/main/default/objects/CustomName_OBXPX__c/fields/CustomField_OMiAR__c.field-meta.xml
<CustomField>
    <fullName>CustomField_OMiAR__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldDXcFj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>